@@ -1586,6 +1586,16 @@ please see math/README to configure.',
 'timezoneoffset'            => 'Offset¹:',
 'servertime'                => 'Server time:',
 'guesstimezone'             => 'Fill in from browser',
+'timezoneregion-africa'     => 'Africa',
+'timezoneregion-america'    => 'America',
+'timezoneregion-antarctica' => 'Antarctica',
+'timezoneregion-arctic'     => 'Arktic',
+'timezoneregion-asia'       => 'Asia',
+'timezoneregion-atlantic'   => 'Atlantic Ocean',
+'timezoneregion-australia'  => 'Australia',
+'timezoneregion-europe'     => 'Europe',
+'timezoneregion-indian'     => 'Indian Ocean',
+'timezoneregion-pacific'    => 'Pacific Ocean',
 'allowemail'                => 'Enable e-mail from other users',
 'prefs-searchoptions'       => 'Search options',
 'prefs-namespaces'          => 'Namespaces',
