@@ -907,6 +907,16 @@ $wgMessageStructure = array(
 		'timezoneoffset',
 		'servertime',
 		'guesstimezone',
+		'timezoneregion-africa',
+		'timezoneregion-america',
+		'timezoneregion-antarctica',
+		'timezoneregion-arctic',
+		'timezoneregion-asia',
+		'timezoneregion-atlantic',
+		'timezoneregion-australia',
+		'timezoneregion-europe',
+		'timezoneregion-indian',
+		'timezoneregion-pacific',
 		'allowemail',
 		'prefs-searchoptions',
 		'prefs-namespaces',
