@@ -93,6 +93,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   "mw-line-odd" and "mw-line-even" to make styling using css possible.
 * (bug 17311) Add a note beside the gender selection menu to tell users that
   this information will be public
+* Localize time zone regions in Special:Preferences
 
 === Bug fixes in 1.15 ===
 * (bug 16968) Special:Upload no longer throws useless warnings.
